--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -254,6 +254,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- dad\n",
+    "    - "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Cheking dataset info"
    ]
   },
